--- a/html/wp-content/themes/cording2-wordpress/scss/layout/l-header.scss
+++ b/html/wp-content/themes/cording2-wordpress/scss/layout/l-header.scss
@@ -1,2 +1,74 @@
 .l-header {
+  width: 100%;
+  display: flex;
+  padding: 30px 70px;
+  height: 90px;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.l-header__link {
+  text-decoration: none;
+  color: #151515;
+}
+
+.l-header__link--select {
+  color: #dd1b57 !important;
+}
+
+
+.l-header__item {
+  list-style: none;
+  padding-left: 30px;
+  font-weight: bold;
+}
+
+.l-header__list {
+  display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .l-header {
+    padding: 20px 20px;
+    height: 60px;
+    width: 100%;
+  }
+
+  .l-header__logo {
+    width: 107px;
+  }
+
+  .l-header__nav {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 5;
+    width: 180px;
+    height: 100vh;
+    background-color: #dd1b57;
+    transition: right 0.5s;
+  }
+
+  .l-header__list {
+    flex-direction: column;
+    margin-top: 90px;
+  }
+
+  .l-header__item {
+    padding-bottom: 28px;
+    padding-left: 50px;
+  }
+
+  .l-header__link {
+    color: white;
+  }
+
+  .l-header__link--select {
+    color: #ef90a4 !important;
+  }
+
+  .open .l-header__nav {
+    right: 0;
+  }
 }
