--- a/html/wp-content/themes/cording2-wordpress/scss/style.scss
+++ b/html/wp-content/themes/cording2-wordpress/scss/style.scss
@@ -12,5 +12,18 @@
 @import "./layout/l-header.scss";
 @import "./layout/l-main.scss";
 @import "./layout/l-footer.scss";
+@import "./layout/l-inner.scss";
+
 
 @import "./utility/u-margin.scss";
+
+@import "./object/project/p-mv.scss";
+@import "./object/project/p-news.scss";
+@import "./object/project/p-service.scss";
+@import "./object/project/p-sub-mv.scss";
+@import "./object/project/p-company.scss";
+@import "./object/project/p-message.scss";
+
+
+@import "./object/component/c-btn.scss";
+@import "./object/component/c-section-title.scss";
