--- a/html/wp-content/themes/cording2-wordpress/scss/foundation/color.scss
+++ b/html/wp-content/themes/cording2-wordpress/scss/foundation/color.scss
@@ -3,9 +3,9 @@
  * 基本はbase, main, accentの3つ
  */
 
-// $main-color: #333;
-// $base-color: #333;
-// $accent-color: #333;
+$main-color: #151515;
+$base-color: #dd1b57;
+$accent-color: #ffffff;
 
 /**
  * 必要に応じて、bodyにベースのカラーを追加
