--- a/html/wp-content/themes/cording2-wordpress/scss/object/project/p-company.scss
+++ b/html/wp-content/themes/cording2-wordpress/scss/object/project/p-company.scss
@@ -9,12 +9,16 @@
 
 .p-company-info {
   margin-bottom: 50px;
+  @include mq("sp"){
+    margin-top: 35px;
+  }
 }
 
 .p-company-info__list {
   display: flex;
   flex-wrap: wrap;
   font-size: 15px;
+  @include mq("sp"){}
 }
 
 .p-company-info__item-name {
@@ -22,17 +26,32 @@
   padding: 30px 0;
   padding-left: 30px;
   border-bottom: 1px solid #dddddd;
+  @include mq("sp"){
+    padding-left: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 14px;
+  }
 }
 
 .p-company-info__content {
   width: 70%;
   padding: 30px 0;
   border-bottom: 1px solid #dddddd;
+  @include mq("sp"){
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    font-size: 14px;
+  }
 }
 
 .p-company__map__container {
   width: 100%;
   height: 400px;
+  @include mq("sp"){
+    height: 300px;
+  }
 }
 
 .p-company__map-btn {
@@ -41,6 +60,10 @@
   margin-bottom: 30px;
   font-size: 15px;
   color: #349bf4;
+  text-decoration: underline;
+  @include mq("sp"){
+    font-size: 12px;
+  }
 }
 
 /* company news */
@@ -48,62 +71,30 @@
   display: flex;
   flex-wrap: wrap;
   font-size: 15px;
+  @include mq("sp"){
+    display: block;
+    flex-wrap: wrap;
+    font-size: 15px;
+  }
 }
 
 .p-company__news__date {
   width: 10%;
   padding: 15px 0 15px 0;
   border-bottom: 1px solid #e8e8e8;
+  @include mq("sp"){
+    border-bottom: 0px;
+    padding: 15px 0 5px 0;
+    width: 100%;
+  }
 }
 
 .p-company__news__content {
   width: 90%;
   padding: 15px 0 15px 0;
   border-bottom: 1px solid #e8e8e8;
-}
-
-@media screen and (max-width: 767px) {
-  .p-company-info {
-    margin-top: 35px;
-    margin-bottom: 50px;
-  }
-
-  .p-company-info__item-name {
-    padding-left: 0;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    font-size: 14px;
-  }
-  .p-company-info__content {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 40px;
-    font-size: 14px;
-  }
-
-  .p-company-info__map-btn {
-    font-size: 12px;
-  }
-
-  .p-company__news__list {
-    display: block;
-    flex-wrap: wrap;
-    font-size: 15px;
-  }
-
-  .p-company__news__date {
-    border-bottom: 0px;
-    padding: 15px 0 5px 0;
-
-    width: 100%;
-  }
-
-  .p-company__news__content {
+  @include mq("sp"){
     padding: 5px 0 15px 0;
     width: 100%;
-  }
-
-  .company__map__container {
-    height: 300px;
   }
 }
