--- a/html/wp-content/themes/cording2-wordpress/scss/object/project/p-mv.scss
+++ b/html/wp-content/themes/cording2-wordpress/scss/object/project/p-mv.scss
@@ -1,5 +1,6 @@
 .p-page-top-mv {
   width: 100%;
+  @include mq("sp"){}
 }
 
 .p-mv__container {
@@ -11,43 +12,34 @@
   background-size: cover;
   align-items: center;
   justify-content: center;
+  @include mq("sp"){
+    width: 100%;
+    height: 460px;
+    background-image: url(../img/sp_mv.png);}
 }
 
 .p-mv__title {
   text-align: center;
   text-shadow: 0 4px 6px rgb(0 0 0 / 25%);
+  @include mq("sp"){
+    width: 375px;
+  }
 }
 .p-mv__maintitle {
   font-size: 160px;
-  color: #ffffff;
+  color: $accent-color;
   font-weight: bold;
+  @include mq("sp"){
+    font-size: 80px;
+  }
 }
 
 .p-mv__subtitle {
   font-size: 24px;
-  color: #ffffff;
+  color: $accent-color;
   letter-spacing: 0.1em;
   font-weight: bold;
-}
-
-
-
-@media screen and (max-width: 767px) {
-  .p-mv__container {
-    width: 100%;
-    height: 460px;
-    background-image: url(../img/sp_mv.png);
-  }
-
-  .p-mv__title {
-    width: 375px;
-  }
-
-  .p-mv__maintitle {
-    font-size: 80px;
-  }
-
-  .p-mv__subtitle {
+  @include mq("sp"){
     font-size: 20px;
   }
 }
