--- a/html/wp-content/themes/cording2-wordpress/scss/object/project/p-sub-mv.scss
+++ b/html/wp-content/themes/cording2-wordpress/scss/object/project/p-sub-mv.scss
@@ -11,28 +11,23 @@
   background-size: cover;
   align-items: center;
   justify-content: center;
+  @include mq("sp"){
+    height: 160px;
+  }
 }
 
 .p-sub-mv__title {
   text-align: center;
   text-shadow: 0 4px 6px rgb(0 0 0 / 25%);
+  @include mq("sp"){}
 }
 
 .p-sub-mv__maintitle {
   font-size: 40px;
-  color: #ffffff;
+  color: $accent-color;
   font-weight: bold;
-}
-
-@media screen and (max-width: 767px) {
-  .p-sub-mv {
-    color: #ef90a4;
-  }
-
-  .p-sub-mv__maintitle {
+  @include mq("sp"){
     font-size: 28px;
   }
-  .p-sub-mv__container {
-    height: 160px;
-  }
 }
+
